<resources>
    <string name="app_name">Gurukul</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ad_unit_id">ca-app-pub-6713347518830764/8593233632</string>
    <string name="atomic_structure">atomic structure</string>
    <string name="maths_1_a">MATHS 1(A)</string>
    <string name="chemistry">CHEMISTRY</string>
    <string name="physics">PHYSICS</string>
    <string name="engineering_drawing">ENGINEERING DRAWING</string>
    <string name="communication_skill">COMMUNICATION SKILL</string>
    <string name="b_i_t">B.I.T</string>
    <string name="workshop">WORKSHOP</string>
    <string name="periodic_table">periodic table</string>
    <string name="chemical_bonding">chemical bonding</string>
    <string name="state_of_matter">state of matter</string>
    <string name="fuels_amp_lubricants"><![CDATA[fuels & lubricants]]></string>
    <string name="water">water</string>
    <string name="electrochemistry">electrochemistry</string>
    <string name="corrosion_amp_its_control"><![CDATA[corrosion & its control]]></string>
    <string name="organic_compound_nomenclature">organic compound-Nomenclature</string>
    <string name="polymers">polymers</string>
    <string name="practical_chemistry">practical chemistry</string>
    <string name="viva_voce">viva voce</string>
    <string name="sample_paper">sample paper</string>
    <string name="units_amp_dimensions"><![CDATA[units & Dimensions]]></string>
    <string name="force_amp_motion"><![CDATA[force & Motion]]></string>
    <string name="work_power_amp_energy"><![CDATA[work, power & energy]]></string>
    <string name="rotational_motion">rotational motion</string>
    <string name="motion_of_planets_amp_satellites"><![CDATA[motion of planets & satellites]]></string>
    <string name="properties_of_matter">properties of matter</string>
    <string name="heat_amp_thermodynamics"><![CDATA[heat & thermodynamics]]></string>
    <string name="practical">practical</string>
    <string name="introduction_to_information_technology">introduction to information technology</string>
    <string name="input_devices">input devices</string>
    <string name="computer_number_system">computer:Number system</string>
    <string name="computer_network">computer network</string>
    <string name="memory">memory</string>
    <string name="mobile_computing">mobile computing</string>
    <string name="top_100_questions">top 100 Questions</string>
    <string name="general_introduction">general Introduction</string>
    <string name="smithy_shop">smithy shop</string>
    <string name="foundry_work">foundry work</string>
    <string name="fitting_plumbing_and_fastening_shop">fitting plumbing and fastening shop</string>
    <string name="sheet_metal_and_soldering_shop">sheet metal and soldering shop</string>
    <string name="painting_and_polishing_shop">painting and polishing shop</string>
    <string name="carpentry_shop">carpentry shop</string>
    <string name="welding_shop">welding shop</string>
    <string name="machine_shop">machine shop</string>
    <string name="project_work">project work</string>
    <string name="electrical_shop">electrical shop</string>
    <string name="mesan_shop">mesan shop</string>
    <string name="progressions">progressions</string>
    <string name="binomial_theorem">binomial theorem</string>
    <string name="detarminants">detarminants</string>
    <string name="vector_algebra">vector algebra</string>
    <string name="complex_number_de_moivre_s_theorem">complex number,de moivre\'s theorem</string>
    <string name="relation_btw_sides_and_angle_of_triangle">relation btw sides and angle of triangle</string>
    <string name="inverse_circular_fun_and_hyperbolic_fun">inverse circular fun. and hyperbolic fun.</string>
    <string name="functions_limit_and_continuity">functions,limit and continuity</string>
    <string name="differentiation">differentiation</string>
    <string name="higher_order_derivatives">higher order derivatives</string>
    <string name="tangent_and_normals">tangent and normals</string>
    <string name="maxima_and_minima">maxima and minima</string>
    <string name="application_of_differentiation">application of differentiation</string>
    <string name="intro_to_engg_drawing_and_lines">intro. to engg. drawing and lines</string>
    <string name="simple_geometrical_constructions">simple geometrical constructions</string>
    <string name="dimensioning">dimensioning</string>
    <string name="scales">scales</string>
    <string name="orthographic_projection">orthographic projection</string>
    <string name="projections_of_points">projections of points</string>
    <string name="projections_of_straight_lines">projections of straight lines</string>
    <string name="projections_of_planes">projections of planes</string>
    <string name="identification_of_surfaces">identification of surfaces</string>
    <string name="projections_of_solid">projections of solid</string>
    <string name="sectional_views_of_object">sectional views of object</string>
    <string name="isometric_projection">isometric projection</string>
    <string name="symbols_and_conventions">symbols and conventions</string>
    <string name="autocad">autocad</string>
    <string name="basics_of_communication">basics of communication</string>
    <string name="application_of_grammer">application of grammer</string>
    <string name="reding_skill">reding skill</string>
    <string name="writing_skill">writing skill</string>
    <string name="model_paper">model paper</string>
    <string name="integration">Integration</string>
    <string name="integration_by_substitution">Integration by substitution</string>
    <string name="integration_by_parts">integration by parts</string>
    <string name="integration_by_partial_functions">integration by partial functions</string>
    <string name="some_specific_integrals">some specific integrals</string>
    <string name="definite_integration">definite integration</string>
    <string name="mean_value">mean value</string>
    <!--    ca-app-pub-4838993672643383/2747662979-->
</resources>
