<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkshopActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingStart="40sp"
                android:text="@string/general_introduction"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="36dp"
                android:text="@string/carpentry_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="36dp"
                android:text="@string/painting_and_polishing_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/sheet_metal_and_soldering_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/fitting_plumbing_and_fastening_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/foundry_work"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/smithy_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />
            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/welding_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />
            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/machine_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />
            <Button
                android:id="@+id/btn10"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/project_work"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />
            <Button
                android:id="@+id/btn11"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/electrical_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />
            <Button
                android:id="@+id/btn12"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="40sp"
                android:text="@string/mesan_shop"
                android:fontFamily="@font/choco"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:backgroundTint="#D6D6D6"
                style="bold" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>